--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,5 +1,33 @@
+// start with titleSection
+
 .titelSection {
   width: 100%;
   height: 80px;
+  margin-top: 60px;
+  margin-bottom: 21px;
   text-align: center;
 }
+
+.titelSection__btn {
+  width: 343px;
+  height: 48px;
+  top: 392px;
+  background: $black100;
+  color: $white;
+  margin-top: 39px;
+}
+
+.titelSection__bigPicture {
+  width: 375px;
+  height: 176px;
+  margin-top: 56px;
+}
+
+// start with magazinSection
+
+//.magazinSection {
+//  background-color: hotpink;
+//  height: 50px;
+//  width: 50px;
+//}
+
