--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -43,6 +43,7 @@
   background-color: white;
   border: none;
   margin-top: 6px;
+  text-decoration: underline;
 }
 
 .magazinSection__box--border {
@@ -59,6 +60,67 @@
   margin-top: 48px;
   background-color: $white;
   margin-left: 16px;
-
 }
+
+// start with bannerSection
+
+.bannerSection {
+  width: 375px;
+  height: 432px;
+  background-color: $black100;
+  margin-top: 125px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bannerSection__box {
+  position: relative;
+  height: 30%;
+}
+
+.bannerSection__pic {
+  width: 85px;
+  position: absolute;
+  transform: translate(-50%);
+  top: -64px;
+}
+
+.bannerSection__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 70%;
+}
+
+.bannerSection__title {
+  color: $white;
+  font-size: 32px;
+  line-height: 40px;
+  font-family: Roboto;
+  padding: 0 32px 0 32px;
+}
+
+.bannerSection__btn {
+  width: 227px;
+  height: 48px;
+  color: $white;
+  background-color: $black100;
+  border: solid 0.5px $white;
+  font-family: Roboto sans-serif;
+  font-weight: 200;
+}
+
+.bannerSection__img--1 {
+  width: 172px;
+  height: 50px;
+}
+
+.bannerSection__img--2 {
+  width: 172px;
+  height: 50px;
+}
+
+
 
