--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -18,7 +18,7 @@
   margin-top: 39px;
 }
 
-.titleSection__bigPicture {
+.titleSection__img {
   width: 375px;
   height: 176px;
   margin-top: 56px;
@@ -149,13 +149,14 @@
 
 }
 
-.newsSection__title {
+.newsSection__h1 {
   padding-bottom: 38px;
 }
 
 .newsSection__bigBox {
   height: 440px;
   background-color: #FFFFFF;
+  margin-bottom: 16px;
 }
 
 .newsSection__boxBig--img {
@@ -171,4 +172,30 @@
   border-bottom: #E5E5E5 solid 1px;
   width: 100%;
   background-color: #FFFFFF;
+}
+
+.newsSection__smallBox {
+  width: 100%;
+  height: 208px;
+  background-color: #FFFFFF;
+  margin-bottom: 16px;
+}
+
+.newsSection__smallBox--content {
+  padding: 20px 24px 10px 24px;
+
+
+}
+
+.newsSection__smallBox--content--content {
+  border-bottom: #E5E5E5 solid 1px;
+  width: 100%;
+  background-color: #FFFFFF;
+}
+
+.newsSection__moreBtn--transp {
+  background: transparent;
+  border: 2px solid #000000;
+  width: 100%;
+  margin-left: 0;
 }
