--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -27,7 +27,8 @@
 // start with magazinSection
 
 .magazineSection {
-  margin-top: 68px;
+  //margin-top: 68px;
+  padding: 0 16px 0 16px;
 }
 
 .magazineSection__box {
@@ -40,10 +41,10 @@
 }
 
 .magazineSection__box--Btn {
-  background-color: white;
   border: none;
   margin-top: 6px;
   text-decoration: underline;
+  background-color: transparent;
 }
 
 .magazineSection__box--border {
@@ -59,7 +60,6 @@
   height: 48px;
   margin-top: 48px;
   background-color: $white;
-  margin-left: 16px;
 }
 
 // start with bannerSection
@@ -146,11 +146,13 @@
 
 .newsSection {
   padding: 0 16px 0 16px;
+  background-color: #F0F0F0;
 
 }
 
 .newsSection__h1 {
   padding-bottom: 38px;
+  padding-top: 63px;
 }
 
 .newsSection__bigBox {
@@ -172,6 +174,10 @@
   border-bottom: #E5E5E5 solid 1px;
   width: 100%;
   background-color: #FFFFFF;
+}
+
+.newsSection__boxBig--icon {
+  padding-top: 16px;
 }
 
 .newsSection__smallBox {
