padding fix magazin seciton

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -26,7 +26,7 @@
 
 // start with magazinSection
 
-.magazineSection {
+.magazinSection {
   //margin-top: 68px;
   padding: 0 16px 0 16px;
 }
@@ -60,6 +60,7 @@
   height: 48px;
   margin-top: 48px;
   background-color: $white;
+  border: solid black 1px;
 }
 
 // start with bannerSection
