color icons footer

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -30,3 +30,8 @@
   justify-content: space-around;
   padding-top: 8.5px;
 }
+
+#socialmedia_facebook, #socialmedia_instagram, #socialmedia_twitter,
+#socialmedia_youtube, #socialmedia_snapchat, #navigation_backtotop {
+  fill: #DADADA;
+}
