color fix icons footer

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -33,5 +33,5 @@
 
 #socialmedia_facebook, #socialmedia_instagram, #socialmedia_twitter,
 #socialmedia_youtube, #socialmedia_snapchat, #navigation_backtotop {
-  fill: #DADADA;
+  fill: #767676;
 }
