styling music icons discoverySection in progress

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -141,29 +141,27 @@
 }
 
 .discoverySection__img {
-  height: 181px;
+  height: 153px;
   width: 100%;
   margin-top: 83px;
-  background-color: yellow;
+  background-color: lightblue;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+/* Todo: embed background-image
 .discoverySection__icon--hiphop {
-  -webkit-mask-image: url(../images/Icons/music_hiphop.svg);
   height: 181px;
   width: 100%;
-  -webkit-mask-size: contain;
-  -webkit-mask-repeat: repeat-x;
-  background-color: #D81B60;
 }
+*/
+
 
 .discoverySection__img--play {
-  -webkit-mask-image: url(../images/Icons/detail_video_play.svg);
+  background-image: url(../images/Icons/detail_video_play.svg);
   height: 40px;
   width: 29px;
-  -webkit-mask-size: cover;
-  -webkit-mask-repeat: no-repeat;
-  background-color: #000000;
+  background-repeat: no-repeat;
 }
 
 
