--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -4,6 +4,8 @@
   background: rgba(0, 0, 0, 0.85);
   padding: 0 16px 0 16px;
   //display: none;
+  opacity: 2;
+  z-index: 2;
 }
 
 .navSection__h2 {
