--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -3,10 +3,10 @@
   height: 640px;
   background: rgba(0, 0, 0, 0.85);
   padding: 0 16px 0 16px;
-  //display: none;
-  opacity: 2;
-  z-index: 2;
+  display: none;
 }
+
+
 
 .navSection__h2 {
   color: #FFFFFF;
