change Menu to Schliessen with javaScript

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -59,6 +59,10 @@ body, body * {
   background-color: black;
   width: 24px;
   height: 3px;
+
+  &--white {
+    background-color: white;
+  }
 }
 
 
