--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -45,6 +45,7 @@ body, body * {
   align-items: center;
   width: 100%;
   height: 64px;
+  z-index: 1;
 }
 
 .headerSection__Icon {
@@ -60,9 +61,6 @@ body, body * {
   width: 24px;
   height: 3px;
 
-  &--white {
-    background-color: white;
-  }
 }
 
 
@@ -87,6 +85,7 @@ body, body * {
       transform: rotate(-45deg);
       position: relative;
       top: 2px;
+      background-color: white;
 
     }
 
@@ -98,6 +97,8 @@ body, body * {
       transform: rotate(45deg);
       position: relative;
       bottom: 4px;
+      background-color: white;
+
     }
 
 
@@ -155,12 +156,33 @@ body, body * {
 }
 
 // new color for svg
-#navigation_login {
-  fill: #DADADA;
+
+.navigation__like {
+  fill: #000000;
+
+  &--white {
+    fill: #FFFFFF;
+  }
+
 }
 
-#navigation_ticketkauf {
-  fill: #DADADA;
+.navigation__login {
+  fill: #C2C2C2;
+
+ &--white {
+   fill: #FFFFFF;
+ }
+
+
+}
+
+.navigation__ticket {
+  fill: #C2C2C2;
+
+  &--white {
+    fill: #FFFFFF;
+  }
+
 }
 
 
