--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,25 +1,44 @@
 .loginSection__Box {
   position: absolute;
-  background-color: hotpink;
-
 }
+
+.loginSection__triangleBox {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+}
+
+.loginSection__triangle {
+  position: relative;
+  border-bottom: solid 30px black;
+  border-left: solid 30px transparent;
+  border-right: solid 30px transparent;
+  border-right: solid 30px transparent;
+  left: 230px;
+  bottom: 10px;
+}
+
 
 .loginSection__containter {
   position: relative;
   width: 310px;
   height: 425px;
-  left: 32px;
-  top: 88px;
+  left: 370px;
+  top: 150px;
   //color: white;
   top: 200px;
   background-color: #000000;
-  padding: 32px 25px 40px 25px;
 }
 
 .LoginSection__BoxA {
   height: 70%;
-  background-color: green;
   border-bottom: #C2C2C2 solid 1px ;
+  padding: 32px 25px 40px 25px;
+}
+
+.LoginSection__BoxB {
+  height: 30%;
+  padding: 40px 25px 40px 25px;
 }
 
 .loginSection__input {
@@ -34,7 +53,7 @@
 }
 
 .loginSection__register {
-  margin-top: 2em;
+  margin-top: 1em;
   width: 100%;
   height: 48px;
   background-color: #FFFFFF;
