change position of triangle

--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -2,13 +2,13 @@
 
 
 .loginSection__triangle {
-  position: relative;
-  border-bottom: solid 30px black;
-  border-left: solid 30px transparent;
-  border-right: solid 30px transparent;
-  border-right: solid 30px transparent;
-  left: 230px;
-  bottom: 10px;
+  position: absolute;
+  border-bottom: solid 24px black;
+  border-left: solid 24px transparent;
+  border-right: solid 24px transparent;
+  border-right: solid 24px transparent;
+  left: 234px;
+  top: -14px;
 }
 
 
