--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -2,27 +2,27 @@
 
 @font-face {
   src: url("src/fonts/Adelle_Bold.otf");
-  font-family: AdelleBold, sans-serif;
+  font-family: AdelleBold;
 };
 
 @font-face {
   src: url("src/fonts/Adelle_Reg.otf");
-  font-family: AdelleReg, sans-serif;
+  font-family: AdelleReg;
 };
 
 @font-face {
   src: url("src/fonts/ProximaNova-Reg.ttf");
-  font-family: ProximaNovaReg, sans-serif;
+  font-family: ProximaNovaReg;
 };
 
 @font-face {
   src: url("src/fonts/ProximaNova-Light.ttf");
-  font-family: ProximaNovaLight, sans-serif;
+  font-family: ProximaNovaLight;
 };
 
 @font-face {
   src: url("src/fonts/ProximaNova-Bold.ttf");
-  font-family: ProximaNovaBold, sans-serif;
+  font-family: ProximaNovaBold;
 };
 
 
@@ -32,32 +32,32 @@
   font-size: 20px;
   line-height: 32px;
   color: #000000;
-  font-family: AdelleReg, sans-serif;
+  font-family: AdelleReg;
 }
 
 .copy {
   font-size: 17px;
   line-height: 28px;
   color: #000000;
-  font-family: ProximaNovaReg, sans-serif;
+  font-family: ProximaNovaReg;
 }
 
 .footerLabels {
   font-size: 17px;
   line-height: 28px;
-  font-family: ProximaNovaReg, sans-serif;
+  font-family: ProximaNovaReg;
 }
 
 .btnTabsHeader {
   font-size: 17px;
   line-height: 28px;
-  font-family: ProximaNovaBold, sans-serif;
+  font-family: ProximaNovaBold;
 }
 
 .breadcrumbInfosDatesLikes {
   font-size: 13px;
   line-height: 28px;
-  font-family: ProximaNovaReg, sans-serif;
+  font-family: ProximaNovaReg;
 }
 
 
@@ -66,7 +66,7 @@
 h1 {
   font-size: 32px;
   line-height: 40px;
-  font-family: AdelleBold, sans-serif;
+  font-family: AdelleReg;
   color: #000000;
   text-align: center;
 }
@@ -74,21 +74,21 @@ h1 {
 h2 {
   font-size: 24px;
   line-height: 32px;
-  font-family: AdelleBold, sans-serif;
+  font-family: AdelleBold;
   color: #000000;
 }
 
 h3 {
   font-size: 20px;
   line-height: 32px;
-  font-family: AdelleBold, sans-serif;
+  font-family: AdelleBold;
   color: #000000;
 }
 
 .FestivalFont {
   font-size: 48px;
   line-height: 40px;
-  font-family: AdelleBold, sans-serif;
+  font-family: AdelleBold;
   color: #FFFFFF;
 }
 
