--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -32,32 +32,32 @@
   font-size: 20px;
   line-height: 32px;
   color: #000000;
-  font-family: AdelleReg;
+  font-family: AdelleReg, sans-serif;
 }
 
 .copy {
   font-size: 17px;
   line-height: 28px;
   color: #000000;
-  font-family: ProximaNovaReg;
+  font-family: ProximaNovaReg, sans-serif;
 }
 
 .footerLabels {
   font-size: 17px;
   line-height: 28px;
-  font-family: ProximaNovaReg;
+  font-family: ProximaNovaReg, sans-serif;
 }
 
 .btnTabsHeader {
   font-size: 17px;
   line-height: 28px;
-  font-family: ProximaNovaBold;
+  font-family: ProximaNovaBold, sans-serif;
 }
 
 .breadcrumbInfosDatesLikes {
   font-size: 13px;
   line-height: 28px;
-  font-family: ProximaNovaReg;
+  font-family: ProximaNovaReg, sans-serif;
 }
 
 
@@ -66,7 +66,7 @@
 h1 {
   font-size: 32px;
   line-height: 40px;
-  font-family: AdelleReg;
+  font-family: AdelleBold, sans-serif;
   color: #000000;
   text-align: center;
 }
@@ -74,21 +74,21 @@ h1 {
 h2 {
   font-size: 24px;
   line-height: 32px;
-  font-family: AdelleBold;
+  font-family: AdelleBold, sans-serif;
   color: #000000;
 }
 
 h3 {
   font-size: 20px;
   line-height: 32px;
-  font-family: AdelleBold;
+  font-family: AdelleBold, sans-serif;
   color: #000000;
 }
 
 .FestivalFont {
   font-size: 48px;
   line-height: 40px;
-  font-family: AdelleBold;
+  font-family: AdelleBold, sans-serif;
   color: #FFFFFF;
 }
 
