last status fonts

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -2,27 +2,27 @@
 
 @font-face {
   src: url("src/fonts/Adelle_Bold.otf");
-  font-family: AdelleBold;
+  font-family: AdelleBold, sans-serif;
 };
 
 @font-face {
   src: url("src/fonts/Adelle_Reg.otf");
-  font-family: AdelleReg;
+  font-family: AdelleReg, sans-serif;
 };
 
 @font-face {
   src: url("src/fonts/ProximaNova-Reg.ttf");
-  font-family: ProximaNovaReg;
+  font-family: ProximaNovaReg, sans-serif;
 };
 
 @font-face {
   src: url("src/fonts/ProximaNova-Light.ttf");
-  font-family: ProximaNovaLight;
+  font-family: ProximaNovaLight, sans-serif;
 };
 
 @font-face {
   src: url("src/fonts/ProximaNova-Bold.ttf");
-  font-family: ProximaNovaBold;
+  font-family: ProximaNovaBold, sans-serif;
 };
 
 
