--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -28,13 +28,20 @@ body, body * {
   justify-content: center;
   background-color: #F0F0F0;;
 
+  @include small {
+    background-color: red;
+  }
+
 }
 
 // start with container
 
 .container {
-  max-width: 375px;
   background-color: $white;
+  max-width: 1600px;
+
+
+
 }
 
 // start with headerSection
@@ -47,66 +54,107 @@ body, body * {
   height: 64px;
   z-index: 1;
   background-color: $white;
-  position: relative;
+  position: fixed;
 
   &--changeColor {
     background-color: rgba(0, 0, 0, 0.85);
   }
-}
 
-.headerSection__Icon {
-  display: flex;
-  justify-content: space-between;
-}
+  .headerSection__Icon {
+    display: flex;
+    justify-content: space-between;
 
-// start with hamburger
+    .headerSection__flLogo {
+      width: 156px;
+      height: 23px;
+      display: none;
 
-
-.rack {
-  background-color: black;
-  width: 24px;
-  height: 3px;
-
-}
-
-
-.headerSection__hamburger {
-  height: 24px;
-  width: 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  cursor: pointer;
-
-
-  // .headerSection__hamburger-close
-  &-close {
-    cursor: pointer;
-
-
-    .rack.upper {
-      transform: rotate(-45deg);
-      position: relative;
-      top: 2px;
-      background-color: white;
+      @include small {
+        display: inline-block;
+        margin-left: 40%;
+      }
 
     }
 
-    .rack.middle {
-      opacity: -1;
+    .headerSection__hamburgerBox {
+
+
+      .headerSection__hamburger {
+        height: 24px;
+        width: 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        cursor: pointer;
+
+        .rack {
+          background-color: black;
+          width: 24px;
+          height: 3px;
+
+        }
+
+
+        // .headerSection__hamburger-close
+        &-close {
+          cursor: pointer;
+
+
+          .rack.upper {
+            transform: rotate(-45deg);
+            position: relative;
+            top: 2px;
+            background-color: white;
+
+          }
+
+          .rack.middle {
+            opacity: -1;
+          }
+
+          .rack.lower {
+            transform: rotate(45deg);
+            position: relative;
+            bottom: 4px;
+            background-color: white;
+
+          }
+
+
+        }
+
+
+      }
     }
 
-    .rack.lower {
-      transform: rotate(45deg);
-      position: relative;
-      bottom: 4px;
-      background-color: white;
-
+    .headerSection__text {
+      margin-left: 11px;
     }
+
+
 
 
   }
+
+  .headerSection__Icon--navLike {
+    width: 65%;
+    height: 64px;
+    display: flex;
+    align-items: center;
+    border: #E5E5E5 1px solid;
+    border-right: none;
+    justify-content: flex-start;
+    padding-left: 16px;
+
+
+  }
+
+
 }
+
+
+
+
 
 
 // start with navSection
@@ -116,45 +164,91 @@ body, body * {
 }
 
 
-.headerSection__Icon--navLike {
-  width: 70%;
-  height: 64px;
-  display: flex;
-  align-items: center;
-  border: #E5E5E5 1px solid;
-  border-right: none;
-  justify-content: space-around;
-}
+
 
 .headerSection__Icon--loginTicket {
-  width: 30%;
+  width: 35%;
   height: 64px;
   display: flex;
   align-items: center;
   border: #E5E5E5 1px solid;
+
+  .headerSection__IconTicket {
+    width: 50%;
+    height: 64px;
+    border-left: #E5E5E5 1px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include small {
+      width: 60%;
+    }
+
+    .headerSection__IconTicketText {
+      font-size: 17px;
+      color: #C2C2C2;
+      line-height: 28px;
+      font-weight: bold;
+      font-family: Roboto, sans-serif;
+      margin-left: 12px;
+      display: none;
+
+      @include small {
+        display: inline-block;
+      }
+
+    }
+
+  }
+
+
+  .headerSection__IconLogin {
+    width: 50%;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    @include small {
+      width: 40%;
+    }
+
+
+    .headerSection__IconLoginText {
+      font-size: 17px;
+      color: #C2C2C2;
+      line-height: 28px;
+      font-weight: bold;
+      font-family: Roboto, sans-serif;
+      margin-left: 12px;
+      display: none;
+
+      @include small {
+        display: inline-block;
+      }
+
+
+    }
+
+
+
+
+
+  }
 }
 
-.headerSection__IconTicket {
-  width: 64px;
-  height: 64px;
-  border-left: #E5E5E5 1px solid;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-
-.headerSection__IconLogin {
-  width: 64px;
-  height: 64px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
 
 .headerSection__IconLike {
-  padding-right: 46px;
+  margin-left: 40%;
+
+  @include small {
+    visibility: hidden;
+  }
+
+
 }
 
 .headerSection__IconNav {
