--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@import "mediaqueries";
 @import "colors";
 @import "fonts";
 @import "header";
@@ -5,4 +6,6 @@
 @import "footer";
 @import "layer";
 @import "login";
+
+
 
