--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -54,7 +54,6 @@ body, body * {
   height: 64px;
   z-index: 1;
   background-color: $white;
-  position: fixed;
 
   &--changeColor {
     background-color: rgba(0, 0, 0, 0.85);
@@ -144,7 +143,7 @@ body, body * {
     border: #E5E5E5 1px solid;
     border-right: none;
     justify-content: flex-start;
-    padding-left: 16px;
+    padding-left: 2%;
 
 
   }
