--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -4,27 +4,37 @@
   src: url("../fonts/Adelle_Bold.otf");
   font-family: Adelle;
   font-weight: bold;
-};
+}
+
+;
 
 @font-face {
   src: url("../fonts/Adelle_Reg.otf");
   font-family: Adelle;
-};
+}
+
+;
 
 @font-face {
   src: url("../fonts/ProximaNova-Reg.ttf");
   font-family: ProximaNova;
-};
+}
+
+;
 
 @font-face {
   src: url("../fonts/ProximaNova-Light.ttf");
   font-family: ProximaNova;
-};
+}
+
+;
 
 @font-face {
   src: url("../fonts/ProximaNova-Bold.ttf");
   font-family: ProximaNova;
-};
+}
+
+;
 
 
 // Typografie for mobile and desktop
@@ -70,8 +80,13 @@ h1 {
   line-height: 40px;
   font-family: Adelle, sans-serif;
   color: #000000;
-  text-align: center;
   font-weight: bold;
+
+  @include large {
+    font-size: 56px;
+    line-height: 80px;
+  }
+
 }
 
 h2 {
@@ -80,6 +95,12 @@ h2 {
   font-family: Adelle, sans-serif;
   color: #000000;
   font-weight: bold;
+
+  @include large {
+      font-size: 32px;
+      line-height: 40px;
+
+  }
 }
 
 h3 {
@@ -88,6 +109,11 @@ h3 {
   font-family: Adelle, sans-serif;
   color: #000000;
   font-weight: bold;
+
+  @include large{
+      font-size: 20px;
+      line-height: 32px;
+  }
 }
 
 .FestivalFont {
@@ -97,37 +123,17 @@ h3 {
   color: #FFFFFF;
   font-weight: bold;
 
+  @include large{
+      font-size: 144px;
+      line-height: 144px;
+
+  }
+
 }
 
 
 // Typografie desktop
 
-//h1 {
-//  font-size: 56px;
-//  line-height: 80px;
-//  font-family: RobotoSlab;
-//  color: #000000;
-//}
 //
-//h2 {
-//  font-size: 32px;
-//  line-height: 40px;
-//  font-family: RobotoSlab;
-//  color: #000000;
 //
-//}
 //
-//h3 {
-//  font-size: 20px;
-//  line-height: 32px;
-//  font-family: RobotoSlab;
-//  color: #000000;
-//
-//}
-//
-//.FestivalFont {
-//  font-size: 144px;
-//  line-height: 144px;
-//  font-family: RobotoSlab;
-//  color: #FFFFFF;
-//}
