genre filter desktop styling

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -49,6 +49,8 @@
 .copy {
   font-size: 17px;
   line-height: 28px;
+
+
   color: #000000;
   font-family: ProximaNova, sans-serif;
 }
@@ -70,6 +72,12 @@
   font-size: 13px;
   line-height: 28px;
   font-family: ProximaNova, sans-serif;
+}
+
+.genreTitle {
+  font-family: Roboto, sans-serif;
+  font-size: 17px;
+  line-height: 28px;
 }
 
 
@@ -132,8 +140,3 @@ h3 {
 }
 
 
-// Typografie desktop
-
-//
-//
-//
