--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,7 +2,7 @@
 
 .titleSection {
   width: 100%;
-  margin-top: 5%;
+  margin-top: 10%;
   margin-bottom: 21px;
   display: flex;
   flex-direction: column;
@@ -10,12 +10,19 @@
 
   &__h1 {
     margin-bottom: 1em;
+    text-align: center;
   }
 
 
   &__h3 {
-    width: 39%;
     text-align: center;
+
+    @include medium {
+      width: 39%;
+
+    }
+
+
   }
 
   &__btnBox {
@@ -82,6 +89,40 @@
 
   }
 
+  .titleSection__genres {
+
+    display: flex;
+    width: 100%;
+    padding-left: 135px;
+    padding-right: 258px;
+    justify-content: space-around;
+
+    &--more {
+      border: none;
+      background-color: transparent;
+      text-decoration: underline;
+      font-family: Roboto, sans-serif;
+      font-size: 17px;
+      line-height: 28px;
+      font-weight: bold;
+    }
+
+
+    .titleSection__btnGenres {
+      background-color: $greyC2;
+      color: $white;
+      border-radius: 10px;
+      border: none;
+      height: 48px;
+      padding: 14px 14px 14px 14px;
+
+      &--icon {
+        fill: white;
+      }
+    }
+
+  }
+
 }
 
 
@@ -108,13 +149,13 @@
   background-color: transparent;
 }
 
-.magazineSection__box--border {
-  position: absolute;
-  width: 375px;
-  height: 1px;
-  background-color: #E5E5E5;
-  margin-top: 32px;
-}
+//.magazineSection__box--border {
+//  position: absolute;
+//  width: 100%;
+//  height: 1px;
+//  background-color: #E5E5E5;
+//  margin-top: 32px;
+//}
 
 .magazineSection__moreBtn {
   width: 343px;
